docs/beacon/v0.1/reference/contract-addresses.md
---
title: Contract Addresses
---

<TitleSpan>Reference</TitleSpan>

# {{$frontmatter.title}}

<VersionWarning/>

<TocHeader /> <TOC class="table-of-contents" :include-level="[2,3]" />

Following is a list of the contract addresses for use with Airnode version `v0.3.1`.

## RrpBeaconServer.sol

<!-- https://github.com/api3dao/beacon-setup-guide/blob/main/deployments/0.3.1/goerli.json -->

| Network        | Address                                    |
| -------------- | ------------------------------------------ |
| Mainnet        | n/a                                        |
| Goerli         | 0x2cFda716b751eb406C5124C6E4428F2AEA453D96 |
| Polygon-Mumbai | 0xFF298a3169117606BDA78eD6C04917224968f9b5 |
| Rinkeby        | 0x2cFda716b751eb406C5124C6E4428F2AEA453D96 |
| Ropsten        | 0x2cFda716b751eb406C5124C6E4428F2AEA453D96 |

## SelfServeRrpBeaconServerWhitelister.sol

<!-- https://github.com/api3dao/utility-contracts/tree/main/SelfServeRrpBeaconServerWhitelister/deployments -->

| Network        | Address                                    |
| -------------- | ------------------------------------------ |
| Mainnet        | n/a                                        |
| Goerli         | 0x04De82532FeE662877fdf7357Ef92D95B6bc1DfE |
| Polygon-Mumbai | 0x6b67aE19d5d89Dec2c12ec81244808fbfb38b813 |
| Rinkeby        | 0x525d10B8Ed4FA6fb757Bb722400aE6Da4cdfb80A |
| Ropsten        | 0x7432106a4367e6FfA52c75Cd3535b207C09dd34b |
